# personal-chatbot-wa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: config.py  main.py
app/routes/: webhook.py
app/services/: __init__.py  image_service.py  llm_service.py  scheduler_service.py  whatsapp.py
public/: privacy.html
